<resources>
    <string name="app_name">NaviKampus</string>
    <string name="faculty_w1">Mechaniczny</string>
    <string name="faculty_w2">Elektrotechniki, Elektroniki, Informatyki i Automatyki</string>
    <string name="faculty_w3">Chemiczny</string>
    <string name="faculty_w4">Technologii Materiałowych i Wzornictwa Tekstyliów</string>
    <string name="faculty_w5">Biotechnologii i Nauk o Żywności</string>
    <string name="faculty_w6">Budownictwa, Architektury i Inżynierii Środowiska</string>
    <string name="faculty_w7">Fizyki Technicznej, Informatyki i Matematyki Stosowanej</string>
    <string name="faculty_w9">Organizacji i Zarządzania</string>
    <string name="faculty_w10">Inżynierii Procesowej i Ochrony Środowiska</string>
    <string name="building_a2">Budynek A2</string>
    <string name="building_a3">Budynek A3</string>
    <string name="building_a4">Budynek A4</string>
    <string name="building_a5">Budyek A5</string>
    <string name="building_a6">Budynek A6</string>
    <string name="building_a8">Budynek A8 (Garbarstwo)</string>
    <string name="building_a9">Budynek A9</string>
    <string name="building_a10">Budynek A10 (Elektryczny)</string>
    <string name="building_a11">Budynek A11 (Mały Elektryczny)</string>
    <string name="building_a12">Budynek A12</string>
    <string name="building_a13">Sekcja Rekrutacji</string>
    <string name="building_a14">Budynek A14</string>
    <string name="building_a16">Centrum Kształcenia Międzynarodowego IFE</string>
    <string name="building_a17">Kwestura</string>
    <string name="building_a18">Fabryka Inżynierów</string>
    <string name="building_a19">Budynek A19</string>
    <string name="building_a20">Budynek A20 (4M)</string>
    <string name="building_a21">Budynek A21</string>
    <string name="building_a22">Budynek A22 (1M, 2M)</string>
    <string name="building_a24">Budynek A24</string>
    <string name="building_a26">Budynek A26</string>
    <string name="building_a27">Budynek A27</string>
    <string name="building_a28">Budynek A28</string>
    <string name="building_a30">Budynek A30</string>
    <string name="building_a31">Budynek A31</string>
    <string name="building_a33">Budynek A33</string>
    <string name="building_e1">IX Dom Akademicki</string>
    <string name="building_e2">V Dom Akademicki (Tygrys)</string>
    <string name="building_d1">Budynek D1</string>
    <string name="building_c2">Budynek C2</string>
    <string name="building_c3">Budynek C3 (Akwarium)</string>
    <string name="building_c4">Centrum Sportu</string>
    <string name="building_c5">VI Dom Akademicki (Akwarium)</string>
    <string name="building_c6">Budynek C6</string>
    <string name="building_c7">Budynek C7</string>
    <string name="building_c9">VII Dom Akademicki (Siódemka)</string>
    <string name="building_c10">Underground</string>
    <string name="building_c11">IV Dom Akademicki (Czwórka)</string>
    <string name="building_c12">III Dom Akademicki (Trójka)</string>
    <string name="building_c13">II Dom Akademicki (Mikrus)</string>
    <string name="building_c14">I Dom Akademicki (Jedynka)</string>
    <string name="building_c15">Budynek C15</string>
    <string name="building_c16">VIII Dom Akademicki (Zwartek)</string>
    <string name="building_b1">Rektorat Politechniki Łódzkiej</string>
    <string name="building_b2">Budynek B2</string>
    <string name="building_b3">Budynek B3</string>
    <string name="building_b4">Budynek B4</string>
    <string name="building_b5">Budynek B5</string>
    <string name="building_b6">Budynek B6</string>
    <string name="building_b7">Budynek B7</string>
    <string name="building_b9">Budynek Trzech Wydziałów (Lodex, Tramwaj)</string>
    <string name="building_b10">Budynek B10</string>
    <string name="building_b11">Budynek B11</string>
    <string name="building_b12">Budynek B12</string>
    <string name="building_b13">Budynek B13</string>
    <string name="building_b14">Budynek B14</string>
    <string name="building_b15">Budynek B15</string>
    <string name="building_b16">Budynek B16</string>
    <string name="building_b17">Instytut Papiernictwa i Poligrafii</string>
    <string name="building_b18">Budynek B18 (DMCS, 5E)</string>
    <string name="building_b19">Centrum Technologii Informatycznych</string>
    <string name="building_b22">Biblioteka Główna</string>
    <string name="building_b24_b25">Centrum Językowe</string>
    <string name="institute_i7">Instytut Inżynierii Materiałowej</string>
    <string name="institute_i8">Instytut Obrabiarek i Technologii Budowy Maszyn</string>
    <string name="institute_i10">Instytut Maszyn Przepływowych</string>
    <string name="institute_i12">Instytut Systemów Inżynierii Elektrycznej</string>
    <string name="institute_i13">Instytut Automatyki</string>
    <string name="institute_i14">Instytut Mechatroniki i Systemów Informatycznych</string>
    <string name="institute_i15">Instytut Elektroenergetyki</string>
    <string name="institute_i16">Instytut Elektroniki</string>
    <string name="institute_i17">Instytut Chemii Ogólnej i Ekologicznej</string>
    <string name="institute_i18">Instytut Chemii Organicznej</string>
    <string name="institute_i19">Międzyresortowy Instytut Techniki Radiacyjnej</string>
    <string name="institute_i20">Instytut Technologii Polimerów i Barwników</string>
    <string name="institute_i41">Instytut Architektury Tekstyliów</string>
    <string name="institute_i24">Instytut Informatyki Stosowanej</string>
    <string name="institute_i28">Instytut Podstaw Chemii Żywności</string>
    <string name="institute_i29">Instytut Biochemii Technicznej</string>
    <string name="institute_i30">Instytut Technologii i Analizy Żywności</string>
    <string name="institute_i31">Instytut Technologii Fermentacji i Mikrobiologii</string>
    <string name="institute_i35">Instytut Architektury i Urbanistyki</string>
    <string name="institute_i612">Instytut Inżynierii Środowiska i Instalacji Budowlanych</string>
    <string name="institute_i1">Instytut Informatyki</string>
    <string name="institute_i2">Instytut Matematyki</string>
    <string name="institute_i3">Instytut Fizyki</string>
    <string name="institute_i910">Instytut Nauk Społecznych i Zarządzania Technologiami</string>
    <string name="department_k111">Katedra Pojazdów i Podstaw Budowy Maszyn</string>
    <string name="department_k12">Katedra Wytrzymałości Materiałów i Konstrukcji</string>
    <string name="department_k13">Katedra Dynamiki Maszyn</string>
    <string name="department_k14">Katedra Technologii Maszyn</string>
    <string name="department_k16">Katedra Automatyki, Biomechaniki i Mechatroniki</string>
    <string name="department_k17">Katedra Technologii Materiałowych i Systemów Produkcji</string>
    <string name="department_k25">Katedra Mikroelektroniki i Technik Informatycznych</string>
    <string name="department_k26">Katedra Aparatów Elektrycznych</string>
    <string name="department_k27">Katedra Przyrządów Półprzewodnikowych i Optoelektronicznych</string>
    <string name="department_k32">Katedra Fizyki Molekularnej</string>
    <string name="department_k41">Katedra Włókien Sztucznych</string>
    <string name="department_k46">Katedra Dziewiarstwa</string>
    <string name="department_k48">Katedra Materiałoznawstwa, Towaroznawstwa i Metrologii Włókienniczej</string>
    <string name="department_k411">Katedra Mechaniki i Informatyki Technicznej</string>
    <string name="department_k412">Katedra Mechaniki Maszyn Włókienniczych</string>
    <string name="department_k61">Katedra Mechaniki Materiałów</string>
    <string name="department_k62">Katedra Fizyki Budowli i Materiałów Budowlanych</string>
    <string name="department_k63">Katedra Mechaniki Konstrukcji</string>
    <string name="department_k65">Katedra Budownictwa Betonowego</string>
    <string name="department_k66">Katedra Geotechniki i Budowli Inżynierskich</string>
    <string name="department_k67">Katedra Geodezji, Kartografii Środowiska i Geometrii Wykreślnej</string>
    <string name="department_k91">Katedra Zarządzania</string>
    <string name="department_k94">Katedra Zarządzania Produkcją i Logistyki</string>
    <string name="department_k95">Katedra Integracji Europejskiej i Marketingu Międzynarodowego</string>
    <string name="department_k99">Katedra Systemów Zarządzania i Innowacji</string>
    <string name="department_k101">Katedra Aparatury Procesowej</string>
    <string name="department_k102">Katedra Inżynierii Chemicznej</string>
    <string name="department_k103">Katedra Inżynierii Bioprocesowej</string>
    <string name="department_k106">Katedra Termodynamiki Procesowej</string>
    <string name="department_k107">Katedra Inżynierii Bezpieczeństwa Pracy</string>
    <string name="department_k108">Katedra Inżynierii Środowiska</string>
    <string name="department_k109">Katedra Inżynierii Molekularnej</string>
    <string name="other_1">Centrum Nauczania Matematyki i Fizyki</string>
    <string name="other_2">Centrum Komputerowe Lodman</string>
    <string name="other_3">Kolegium Towaroznawstwa</string>
    <string name="other_4">Kolegium Gospodarki Przestrzennej</string>
    <string name="other_5">Kolegium Logistyki</string>
    <string name="other_6">Centrum Zarządzania i Inżynierii Produkcji w Sieradzu</string>
    <string name="other_7">Centrum Diagnostyki i Terapii Laserowej Fundacji Politechniki Łódzkiej</string>
    <string name="other_8">Uniwersytet Trzeciego Wieku</string>
    <string name="other_9">Łódzki Uniwersytet Dziecięcy Politechniki Łódzkiej</string>
    <string name="other_10">Międzynarodowa Szkoła Doktorska</string>
    <string name="other_11">Sala gimnastyczna</string>
    <string name="other_12">Sekcja Dyplomów</string>
    <string name="other_13">Dyrektor Finansowy</string>
    <string name="other_14">Kwestor</string>
    <string name="other_15">Prorektor ds. Rozwoju Uczelni</string>
    <string name="other_16">Audytorium im. Sułtana</string>
    <string name="other_17">Dział Socjalny</string>
    <string name="other_18">Dział Zamówień Publicznych</string>
    <string name="other_19">Kancelaria</string>
    <string name="other_20">Kanclerz</string>
    <string name="other_21">Sekretariat Kanclerza</string>
    <string name="other_22">Akademickie Centrum Zaufania</string>
    <string name="more">Więcej</string>
    <string name="line1">Line 1</string>
    <string name="line2">Line 2</string>
    <string name="example_text">Przykład</string>
    <string name="go_to">Wyznacz trasę…</string>
    <string name="campuses">Podział na kampusy</string>
    <string name="campusA">Kampus A</string>
    <string name="campusB">Kampus B</string>
    <string name="campusC">Kampus C</string>
    <string name="campusD">Kampus D</string>
    <string name="otherCampus">Inne</string>
    <string name="faculties">Wydziały</string>
    <string name="show_on_map">Pokaż na mapie</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="bubble">bubble</string>
    <string name="app_title">System nawigacyjny dla kampusu Politechniki Łódzkiej dla systemu operacyjnego Android</string>
    <string name="about_me">Monika Rychlik\n\n2016</string>
    <string name="about_info">Aplikacja została stworzona jako projekt pracy inżynierskiej:</string>
    <string name="email">E-mail:</string>
    <string name="phone1">Telefon 1:</string>
    <string name="phone2">Telefon 2:</string>
    <string name="fax">Fax:</string>
    <string name="navigate_from">Wyznacz trasę z:</string>
    <string name="navigate_to">Do:</string>
    <string name="choose_type_of_travel">Wybierz rodzaj trasy:</string>
    <string name="travel_car">Samochodem</string>
    <string name="travel_bike">Rowerem</string>
    <string name="travel_on_foot">Pieszo</string>
    <string name="navigate">Wyznacz</string>
    <string name="my_localization">Mojej lokalizacji</string>
</resources>