<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="25">

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginEnd="6dp"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:textSize="16sp"
                android:text="@string/navigate_from"
                android:textColor="@color/colorPrimaryText"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_margin="6dp"
                android:id="@+id/checkBoxMyLocalization"
                android:text="@string/my_localization"
                android:textColor="@color/colorPrimaryText"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Spinner
            android:layout_width="match_parent"
            android:drawSelectorOnTop="true"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerPointA" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="6dp"
        android:layout_weight="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:textSize="16sp"
            android:text="@string/navigate_to"
            android:textColor="@color/colorPrimaryText" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:id="@+id/spinnerPointB" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_margin="6dp"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/choose_type_of_travel"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            android:id="@+id/radioGroupTypeOfTravel">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_car"
                android:id="@+id/radioButtonCar" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_bike"
                android:id="@+id/radioButtonBike" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel_on_foot"
                android:checked="true"
                android:id="@+id/radioButtonFoot" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_margin="6dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/navigate"
            android:layout_marginBottom="5dp"
            android:id="@+id/buttonNavigate"
            android:layout_gravity="center"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>