<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTitleUnitSign"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:text="@string/line1"
                android:textColor="@color/colorPrimaryText"
                android:layout_margin="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewTitleUnitName"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:text="@string/line2"
                android:textColor="@color/colorSecondaryText"
                android:layout_margin="12dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_margin="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewUnitEmail"
                    android:textSize="16sp"
                    android:text="@string/example_text"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_margin="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/phone1"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_margin="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewUnitPhone1"
                    android:textSize="16sp"
                    android:text="@string/example_text"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_margin="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/phone2"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_margin="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewUnitPhone2"
                    android:textSize="16sp"
                    android:text="@string/example_text"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_margin="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/fax"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_margin="12dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewUnitFax"
                    android:textSize="16sp"
                    android:text="@string/example_text"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_margin="12dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="6dp"
                android:id="@+id/imageViewShowUnitOnMap"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_marker"
                android:contentDescription="@string/show_on_map" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>